Add book reviews

--- a/index.html
+++ b/index.html
@@ -229,15 +229,231 @@
             </div>
         </section>
 
-        <!-- Most Rated Books -->
-        <section class="most-rated">
+        <!-- Old Book Sections -->
+        <section class="old-book-sections">
             <div class="section-container">
-                <h2 class="section-title">Most Rated Books</h2>
-                <div class="books-slider">
-                    <!-- Books will be loaded from the backend -->
-                    <!-- Placeholder for most rated books -->
-                    <div class="slider-placeholder">
-                        Most rated books will be displayed here
+                <h2 class="section-title">Old Book Sections</h2>
+                <div class="books-grid">
+                    <!-- Old books will be loaded from the backend -->
+                    <!-- Placeholder for old books -->
+                    <div class="book-card">
+                        <div class="book-image">
+                            <img
+                                src="images/b_cover1.jpg"
+                                alt="Classic Literature"
+                                class="book-cover"
+                            />
+                        </div>
+                        <div class="book-details">
+                            <h3>Classic Literature</h3>
+                            <p class="author">Various Authors</p>
+                            <p class="condition">
+                                <span>Condition:</span> Good
+                            </p>
+                            <p class="price">৳200</p>
+                            <div class="book-actions">
+                                <button class="btn-add-cart">
+                                    Add to Cart
+                                </button>
+                                <a
+                                    href="pages/book-details.html"
+                                    class="btn-view"
+                                    >View Details</a
+                                >
+                            </div>
+                        </div>
+                    </div>
+                    <div class="book-card">
+                        <div class="book-image">
+                            <img
+                                src="images/b_cover2.jpg"
+                                alt="Vintage Collection"
+                                class="book-cover"
+                            />
+                        </div>
+                        <div class="book-details">
+                            <h3>Vintage Collection</h3>
+                            <p class="author">Classic Writers</p>
+                            <p class="condition">
+                                <span>Condition:</span> Fair
+                            </p>
+                            <p class="price">৳150</p>
+                            <div class="book-actions">
+                                <button class="btn-add-cart">
+                                    Add to Cart
+                                </button>
+                                <a
+                                    href="pages/book-details.html"
+                                    class="btn-view"
+                                    >View Details</a
+                                >
+                            </div>
+                        </div>
+                    </div>
+                    <div class="book-card">
+                        <div class="book-image">
+                            <img
+                                src="images/b_cover3.png"
+                                alt="Antique Books"
+                                class="book-cover"
+                            />
+                        </div>
+                        <div class="book-details">
+                            <h3>Antique Books</h3>
+                            <p class="author">Historical Authors</p>
+                            <p class="condition">
+                                <span>Condition:</span> Used
+                            </p>
+                            <p class="price">৳300</p>
+                            <div class="book-actions">
+                                <button class="btn-add-cart">
+                                    Add to Cart
+                                </button>
+                                <a
+                                    href="pages/book-details.html"
+                                    class="btn-view"
+                                    >View Details</a
+                                >
+                            </div>
+                        </div>
+                    </div>
+                    <div class="book-card">
+                        <div class="book-image">
+                            <img
+                                src="images/b_cover4.webp"
+                                alt="Rare Editions"
+                                class="book-cover"
+                            />
+                        </div>
+                        <div class="book-details">
+                            <h3>Rare Editions</h3>
+                            <p class="author">Limited Print</p>
+                            <p class="condition">
+                                <span>Condition:</span> Excellent
+                            </p>
+                            <p class="price">৳800</p>
+                            <div class="book-actions">
+                                <button class="btn-add-cart">
+                                    Add to Cart
+                                </button>
+                                <a
+                                    href="pages/book-details.html"
+                                    class="btn-view"
+                                    >View Details</a
+                                >
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Recent Added Books -->
+        <section class="recent-added-books">
+            <div class="section-container">
+                <h2 class="section-title">Recent Added Books</h2>
+                <div class="books-grid">
+                    <!-- Recent books will be loaded from the backend -->
+                    <!-- Placeholder for recent books -->
+                    <div class="book-card">
+                        <div class="book-image">
+                            <img
+                                src="images/b_cover1.jpg"
+                                alt="New Arrival 1"
+                                class="book-cover"
+                            />
+                        </div>
+                        <div class="book-details">
+                            <h3>New Arrival 1</h3>
+                            <p class="author">Modern Author</p>
+                            <p class="condition"><span>Condition:</span> New</p>
+                            <p class="price">৳450</p>
+                            <div class="book-actions">
+                                <button class="btn-add-cart">
+                                    Add to Cart
+                                </button>
+                                <a
+                                    href="pages/book-details.html"
+                                    class="btn-view"
+                                    >View Details</a
+                                >
+                            </div>
+                        </div>
+                    </div>
+                    <div class="book-card">
+                        <div class="book-image">
+                            <img
+                                src="images/b_cover2.jpg"
+                                alt="New Arrival 2"
+                                class="book-cover"
+                            />
+                        </div>
+                        <div class="book-details">
+                            <h3>New Arrival 2</h3>
+                            <p class="author">Contemporary Writer</p>
+                            <p class="condition"><span>Condition:</span> New</p>
+                            <p class="price">৳380</p>
+                            <div class="book-actions">
+                                <button class="btn-add-cart">
+                                    Add to Cart
+                                </button>
+                                <a
+                                    href="pages/book-details.html"
+                                    class="btn-view"
+                                    >View Details</a
+                                >
+                            </div>
+                        </div>
+                    </div>
+                    <div class="book-card">
+                        <div class="book-image">
+                            <img
+                                src="images/b_cover3.png"
+                                alt="New Arrival 3"
+                                class="book-cover"
+                            />
+                        </div>
+                        <div class="book-details">
+                            <h3>New Arrival 3</h3>
+                            <p class="author">Latest Author</p>
+                            <p class="condition"><span>Condition:</span> New</p>
+                            <p class="price">৳520</p>
+                            <div class="book-actions">
+                                <button class="btn-add-cart">
+                                    Add to Cart
+                                </button>
+                                <a
+                                    href="pages/book-details.html"
+                                    class="btn-view"
+                                    >View Details</a
+                                >
+                            </div>
+                        </div>
+                    </div>
+                    <div class="book-card">
+                        <div class="book-image">
+                            <img
+                                src="images/b_cover4.webp"
+                                alt="New Arrival 4"
+                                class="book-cover"
+                            />
+                        </div>
+                        <div class="book-details">
+                            <h3>New Arrival 4</h3>
+                            <p class="author">Fresh Talent</p>
+                            <p class="condition"><span>Condition:</span> New</p>
+                            <p class="price">৳400</p>
+                            <div class="book-actions">
+                                <button class="btn-add-cart">
+                                    Add to Cart
+                                </button>
+                                <a
+                                    href="pages/book-details.html"
+                                    class="btn-view"
+                                    >View Details</a
+                                >
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
