--- a/pages/admin/book-view.html
+++ b/pages/admin/book-view.html
@@ -322,6 +322,110 @@
                 margin: 1rem 0;
             }
 
+            .book-reviews {
+                margin-bottom: 2rem;
+            }
+
+            .reviews-container {
+                background-color: #f8f9fa;
+                border-radius: 8px;
+                padding: 1.5rem;
+            }
+
+            .review-item {
+                background-color: white;
+                border: 1px solid #e9ecef;
+                border-radius: 6px;
+                padding: 1rem;
+                margin-bottom: 1rem;
+                box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+            }
+
+            .review-item:last-child {
+                margin-bottom: 0;
+            }
+
+            .review-header {
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+                margin-bottom: 0.5rem;
+            }
+
+            .reviewer-info {
+                display: flex;
+                align-items: center;
+                gap: 0.5rem;
+                margin-bottom: 0.5rem;
+            }
+
+            .reviewer-avatar {
+                width: 32px;
+                height: 32px;
+                background-color: var(--primary-color);
+                color: white;
+                border-radius: 50%;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                font-weight: bold;
+                font-size: 0.9rem;
+            }
+
+            .reviewer-name {
+                font-weight: 600;
+                color: var(--dark-color);
+            }
+
+            .review-date {
+                color: #666;
+                font-size: 0.9rem;
+            }
+
+            .review-rating {
+                display: flex;
+                align-items: center;
+                gap: 0.3rem;
+                margin-bottom: 0.5rem;
+            }
+
+            .star {
+                color: #f39c12;
+                font-size: 1rem;
+            }
+
+            .star.filled {
+                color: #f39c12;
+            }
+
+            .star.empty {
+                color: #ddd;
+            }
+
+            .rating-text {
+                margin-left: 0.5rem;
+                font-weight: 500;
+                color: var(--dark-color);
+            }
+
+            .review-text {
+                color: #333;
+                line-height: 1.5;
+                margin: 0;
+            }
+
+            .no-reviews {
+                text-align: center;
+                padding: 2rem;
+                color: #666;
+            }
+
+            .no-reviews i {
+                font-size: 2rem;
+                margin-bottom: 0.5rem;
+                color: #ddd;
+            }
+
             @media screen and (max-width: 768px) {
                 .book-info-grid {
                     grid-template-columns: 1fr;
@@ -404,6 +508,14 @@
                             <div class="info-item">
                                 <span class="info-label">Condition:</span>
                                 <span class="info-value" id="book-condition"
+                                    >Loading...</span
+                                >
+                            </div>
+                            <div class="info-item">
+                                <span class="info-label"
+                                    >Available Quantity:</span
+                                >
+                                <span class="info-value" id="book-quantity"
                                     >Loading...</span
                                 >
                             </div>
@@ -530,6 +642,41 @@
                         </div>
                     </div>
 
+                    <div class="book-reviews">
+                        <h3
+                            style="
+                                margin-bottom: 1rem;
+                                color: var(--dark-color);
+                                border-bottom: 2px solid var(--primary-color);
+                                padding-bottom: 0.5rem;
+                            "
+                        >
+                            <i
+                                class="fas fa-star"
+                                style="margin-right: 0.5rem"
+                            ></i>
+                            Customer Reviews
+                        </h3>
+                        <div class="reviews-container" id="book-reviews">
+                            <div
+                                style="
+                                    text-align: center;
+                                    padding: 2rem;
+                                    color: #666;
+                                "
+                            >
+                                <i
+                                    class="fas fa-spinner fa-spin"
+                                    style="
+                                        font-size: 1.5rem;
+                                        margin-bottom: 0.5rem;
+                                    "
+                                ></i>
+                                <div>Loading reviews...</div>
+                            </div>
+                        </div>
+                    </div>
+
                     <div class="action-buttons">
                         <button class="btn btn-delete" id="delete-book">
                             <i class="fas fa-trash"></i> Delete Book
@@ -626,6 +773,9 @@
                 // Load book data
                 loadBookData(bookId);
 
+                // Load book reviews
+                loadBookReviews(bookId);
+
                 // Delete book functionality
                 const deleteBtn = document.getElementById("delete-book");
                 if (deleteBtn) {
@@ -689,6 +839,15 @@
                     book.category_name || "N/A";
                 document.getElementById("book-condition").textContent =
                     book.book_condition || "N/A";
+                const qtyEl = document.getElementById("book-quantity");
+                if (qtyEl) {
+                    const qty =
+                        typeof book.stock_quantity !== "undefined" &&
+                        book.stock_quantity !== null
+                            ? book.stock_quantity
+                            : "N/A";
+                    qtyEl.textContent = qty;
+                }
 
                 // Status badge
                 const statusElement = document.getElementById("book-status");
@@ -714,10 +873,32 @@
                 }`;
                 document.getElementById("listed-date").textContent =
                     formatDate(book.created_at) || "N/A";
-                document.getElementById("approval-date").textContent =
-                    book.status === "approved"
-                        ? formatDate(book.updated_at) || "N/A"
-                        : "Pending";
+                // Set approval date based on status
+                const approvalDateEl = document.getElementById("approval-date");
+                if (approvalDateEl) {
+                    let approvalText = "";
+                    switch (book.status) {
+                        case "approved":
+                            approvalText = formatDate(book.updated_at) || "N/A";
+                            break;
+                        case "rejected":
+                            approvalText = `Rejected on ${
+                                formatDate(book.updated_at) || "N/A"
+                            }`;
+                            break;
+                        case "pending":
+                            approvalText = "Pending Approval";
+                            break;
+                        case "sold":
+                            approvalText = `Sold on ${
+                                formatDate(book.updated_at) || "N/A"
+                            }`;
+                            break;
+                        default:
+                            approvalText = "Unknown Status";
+                    }
+                    approvalDateEl.textContent = approvalText;
+                }
 
                 // Description
                 const descriptionElement =
@@ -870,6 +1051,125 @@
                     console.error("Error deleting book:", error);
                     showNotification("Error deleting book", "error");
                 }
+            }
+
+            // Load book reviews from backend
+            async function loadBookReviews(bookId) {
+                try {
+                    const response = await fetch(
+                        `../../backend/api/book_reviews.php?action=get_reviews&book_id=${bookId}`
+                    );
+
+                    if (!response.ok) {
+                        throw new Error(
+                            `HTTP error! status: ${response.status}`
+                        );
+                    }
+
+                    const data = await response.json();
+
+                    if (data.success) {
+                        displayBookReviews(data.reviews);
+                    } else {
+                        displayNoReviews();
+                    }
+                } catch (error) {
+                    console.error("Error loading reviews:", error);
+                    displayNoReviews();
+                }
+            }
+
+            // Display book reviews in the UI
+            function displayBookReviews(reviews) {
+                const reviewsContainer =
+                    document.getElementById("book-reviews");
+
+                if (!reviews || reviews.length === 0) {
+                    displayNoReviews();
+                    return;
+                }
+
+                reviewsContainer.innerHTML = "";
+
+                reviews.forEach((review) => {
+                    const reviewElement = createReviewElement(review);
+                    reviewsContainer.appendChild(reviewElement);
+                });
+            }
+
+            // Create individual review element
+            function createReviewElement(review) {
+                const reviewDiv = document.createElement("div");
+                reviewDiv.className = "review-item";
+
+                // Get reviewer initials for avatar
+                const reviewerName = review.author || "Anonymous";
+                const initials = getInitials(reviewerName);
+
+                // Create stars HTML
+                const starsHTML = createStarsHTML(review.rating);
+
+                reviewDiv.innerHTML = `
+                    <div class="review-header">
+                        <div class="reviewer-info">
+                            <div class="reviewer-avatar">${initials}</div>
+                            <div>
+                                <div class="reviewer-name">${reviewerName}</div>
+                                <div class="review-date">${formatDate(
+                                    review.created_at
+                                )}</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="review-rating">
+                        ${starsHTML}
+                        <span class="rating-text">${review.rating}/5</span>
+                    </div>
+                    <p class="review-text">${
+                        review.review_text || "No review text provided"
+                    }</p>
+                `;
+
+                return reviewDiv;
+            }
+
+            // Create stars HTML based on rating
+            function createStarsHTML(rating) {
+                let starsHTML = "";
+                for (let i = 1; i <= 5; i++) {
+                    if (i <= rating) {
+                        starsHTML += '<i class="fas fa-star star filled"></i>';
+                    } else {
+                        starsHTML += '<i class="fas fa-star star empty"></i>';
+                    }
+                }
+                return starsHTML;
+            }
+
+            // Get initials from name
+            function getInitials(name) {
+                if (!name) return "?";
+                return name
+                    .split(" ")
+                    .map((word) => word.charAt(0))
+                    .join("")
+                    .toUpperCase()
+                    .substring(0, 2);
+            }
+
+            // Display no reviews message
+            function displayNoReviews() {
+                const reviewsContainer =
+                    document.getElementById("book-reviews");
+                reviewsContainer.innerHTML = `
+                    <div class="no-reviews">
+                        <i class="fas fa-star"></i>
+                        <div>No customer reviews yet</div>
+                        <div style="font-size: 0.9rem; margin-top: 0.5rem; color: #999;">
+                            This book hasn't received any reviews from customers
+                        </div>
+                    </div>
+                `;
             }
 
             // Format date
